# adif_tool

./: .gitignore  DIFF  DIFFS  DOIT  Notes.txt  README.md  adif_tool.py  adif_tool2.py  all.py  params.py  pyproject.toml  qso_editor.py  requirements.txt  windoz.bat  work.py  work1.py  work2.py  work3.py  work4.py
