[project]
name = "adif-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adif-io>=0.6.0",
    "adiftools>=0.1.9",
    "numpy>=2.3.1",
    "psutil>=7.1.0",
    "pyserial>=3.5",
    "pytz>=2025.2",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.44",
]
