[project]
name = "adif-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pyserial>=3.5",
    "pytz>=2025.2",
    "scipy>=1.16.3",
    "unidecode>=1.4.0",
    "xlrd>=2.0.2",
]
